--- a/pages/index.css
+++ b/pages/index.css
@@ -2,11 +2,13 @@
   font-size: 16px;
   line-height: 20px;
   font-family: "Inter", sans-serif;
+  min-width: 1100px;
+  max-width: 1600 px;
 }
 
 .header {
 }
-.main {
+.content {
 }
 .footer {
 }
